fixed signup modal visibility on mobile

--- a/css/style.scss
+++ b/css/style.scss
@@ -163,6 +163,7 @@ p {
             border: none;
             border-radius: 25px;
             padding: 12px 40px;
+            transform: scale(1.02);
         }
     }
 }
@@ -172,10 +173,6 @@ p {
     backdrop-filter: blur(60px)!important;
     backdrop-filter: opacity(0.7)!important;
     backdrop-filter: brightness(15)!important;
-}
-
-.modal-md {
-    max-width: 600px;
 }
 
 .hr-line {
@@ -565,5 +562,11 @@ p {
         label {
             font-size: 14px;
         }
+    }
+}
+
+@media (min-width: 768px) {
+    .modal-md {
+        max-width: 600px;
     }
 }
